--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,14 @@ header {
 	padding: 20px;
 	display: flex;
 	align-items: center;
+	justify-content: space-around;
 
 	& .logo {
 		width: 109px;
 		display: flex;
 		align-items: center;
 		gap: 5px;
-		margin-right: auto;
+		/* margin-right: auto; */
 		cursor: pointer;
 
 		img {
@@ -31,11 +32,11 @@ header {
 	}
 
 	nav {
-		width: 400px;
+		width: 450px;
 		display: flex;
 		align-items: center;
 		gap: 30px;
-		margin-right: auto;
+		/* margin-right: auto; */
 
 		a {
 			font-size: 1rem;
@@ -54,7 +55,7 @@ header {
 	}
 
 	.login-buttons {
-		width: 200px;
+		width: 190px;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -89,4 +90,13 @@ header {
 			border-color: rgba(200, 199, 199, 1);
 		}
 	}
+}
+
+main {
+	width: 70%;
+	height: 500px;
+	margin: 20px auto;
+	background: url("/Assets/bg-square.png") center center no-repeat;
+	background-size: cover;
+	border: 1px solid;
 }
