--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,86 @@ main {
 	width: 70%;
 	height: 500px;
 	margin: 20px auto;
+	padding: 20px;
+
+	text-align: center;
 	background: url("/Assets/bg-square.png") center center no-repeat;
 	background-size: cover;
-	border: 1px solid;
+
+	.hero {
+		width: 100%;
+
+		.free-test {
+			width: 340px;
+			height: 40px;
+			margin: 20px auto;
+			display: flex;
+			align-items: center;
+			gap: 10px;
+			padding: 0 10px;
+			text-align: center;
+			background: rgba(255, 251, 248, 1);
+			cursor: pointer;
+			border-radius: 30px;
+
+			.icon {
+				position: relative;
+				width: 30px;
+				height: 30px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background: rgba(249, 146, 61, 0.8);
+				border-radius: 50%;
+				z-index: 5;
+			}
+
+			.icon::after {
+				content: "";
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: -1;
+				border-radius: inherit;
+				background: rgba(249, 146, 61, 0.5);
+				animation: expand 2s infinite ease;
+			}
+
+			p {
+				color: rgba(233, 124, 33, 1);
+			}
+		}
+
+		h1.hero-title {
+			font-size: 4rem;
+			margin-bottom: 25px;
+			color: rgba(26, 26, 26, 1);
+
+			span {
+				color: #f58634;
+			}
+		}
+
+		.hero-desc {
+			width: 430px;
+			margin: 0 auto 20px;
+			font-size: 1rem;
+			font-weight: 400;
+			color: rgba(0, 0, 0, 1);
+		}
+	}
+}
+
+@keyframes expand {
+	0% {
+		transform: scale(0.8);
+	}
+	50% {
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(0.8);
+	}
 }
