--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,13 @@ header {
 main {
 	width: 70%;
 	margin: 0 auto;
-	padding: 20px;
-
+	height: 100vh;
+	/* border: 1px solid; */
+	padding: 20px 20px 0;
 	text-align: center;
 	background: url("/Assets/bg-square.png") center center no-repeat;
 	background-size: cover;
+	overflow: hidden;
 
 	.hero {
 		width: 100%;
@@ -224,7 +226,6 @@ main {
 
 		.globe {
 			width: 80%;
-			margin-top: 500px;
 			margin: 0 auto;
 			cursor: pointer;
 			overflow: hidden;
@@ -233,29 +234,29 @@ main {
 		.globe:hover img {
 			animation: scale 30s forwards ease-in-out;
 		}
+	}
+}
+.support {
+	width: 80%;
+	height: 200px;
+	margin: 0 auto;
+	background: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 70px;
+	z-index: 10;
+	/* border: 1px solid; */
 
-		.support {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 220px;
-			background: #fff;
-			margin-top: 20px;
-			display: flex;
-			align-items: center;
-			justify-content: space-around;
-			z-index: 10;
+	img {
+		width: 120px;
+		filter: opacity(0.5);
+		transition: 0.3s ease;
+		cursor: pointer;
+	}
 
-			img {
-				filter: opacity(0.5);
-				transition: 0.3s ease;
-				cursor: pointer;
-			}
-
-			img:hover {
-				filter: opacity(1);
-			}
-		}
+	img:hover {
+		filter: opacity(1);
 	}
 }
 
@@ -278,6 +279,66 @@ main {
 
 	to {
 		transform: scale(1.5);
+	}
+}
+
+.questionnaire {
+	width: 100%;
+	background: rgba(255, 255, 255, 1);
+
+	.question-box {
+		width: 70%;
+		margin: 10px auto 0;
+		padding: 10px;
+		border-radius: 6px;
+		border: 1px solid;
+
+		.question {
+			width: 100%;
+			margin-block: 10px;
+			text-align: center;
+			border: 1px solid;
+
+			.check-container {
+				width: 50%;
+				padding: 10px;
+				margin: 10px auto;
+				display: flex;
+				align-items: center;
+				justify-content: space-around;
+				border: 1px solid;
+
+				.checkboxes {
+					width: 50%;
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+
+					.checkbox input[type="checkbox"] {
+						position: relative;
+						appearance: none;
+						cursor: pointer;
+					}
+
+					.checkbox input[type="checkbox"]::after {
+						content: "";
+						width: inherit;
+						height: inherit;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-75%, -75%);
+						border-radius: 25%;
+						background: none;
+						border: 1px solid;
+					}
+
+					.small {
+						accent-color: red;
+					}
+				}
+			}
+		}
 	}
 }
 
