--- a/src/App.css
+++ b/src/App.css
@@ -354,6 +354,118 @@ main {
 	}
 }
 
+.steps-section {
+	width: 100%;
+	height: 80vh;
+	padding: 20px 0;
+	background: rgba(255, 255, 255, 1);
+
+	.container {
+		width: 85%;
+		margin: 20px auto 0;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+
+		.steps {
+			width: 50%;
+			padding: 20px;
+			border-radius: 12px;
+
+			h1 {
+				font-size: 2rem;
+				font-weight: 600;
+				margin-bottom: 20px;
+			}
+
+			ul {
+				padding-left: 50px;
+				list-style-type: none;
+
+				li {
+					position: relative;
+					width: 350px;
+					margin-block: 20px;
+					cursor: pointer;
+
+					h4 {
+						font-size: 1.25rem;
+						font-weight: 500;
+						line-height: 1.5;
+					}
+
+					p {
+						font-size: 1rem;
+						color: rgba(94, 94, 94, 1);
+						line-height: 1.5;
+					}
+				}
+
+				li::before {
+					content: "";
+					position: absolute;
+					top: 5px;
+					left: -50px;
+					width: 12px;
+					height: 12px;
+					border: 3px double rgb(255, 255, 255);
+					border-radius: 50%;
+					background: rgba(233, 124, 33, 1);
+					transition: 0.3s ease;
+				}
+
+				li:hover::before {
+					transform: scale(1.25);
+				}
+
+				li:not(:last-child):after {
+					content: "";
+					position: absolute;
+					top: 20px;
+					left: -42px;
+					width: 2px;
+					height: calc(100% + 20px);
+					border-radius: 5px;
+					background: rgba(233, 124, 33, 1);
+				}
+			}
+		}
+
+		.img {
+			width: 40%;
+			height: 400px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 20px;
+			background: url("/Assets/happy_friends.jfif") center -190px no-repeat;
+			background-size: cover;
+
+			.play_thumbnail {
+				width: 80px;
+				height: 80px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background: rgba(245, 237, 228, 0.5);
+				border-radius: 50%;
+				cursor: pointer;
+				transition: 0.3s ease;
+
+				img {
+					margin-left: 8px;
+					width: 35px;
+				}
+			}
+
+			.play_thumbnail:hover {
+				background: rgba(245, 237, 228, 0.8);
+			}
+		}
+	}
+}
+
 .questionnaire {
 	width: 100%;
 	background: rgba(255, 255, 255, 1);
