--- a/src/App.css
+++ b/src/App.css
@@ -580,6 +580,50 @@ main {
 	}
 }
 
+.faqs {
+	width: 100%;
+	padding: 20px 150px;
+
+	h2 {
+		font-weight: 500;
+		font-size: 2rem;
+		margin-bottom: 30px;
+	}
+
+	.container {
+		width: 100%;
+		margin: 10px auto 0;
+
+		.question-box {
+			width: 100%;
+			margin-block: 10px;
+			padding-block: 30px;
+			border-bottom: 1px solid rgba(94, 94, 94, 0.15);
+
+			.question {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				padding-inline: 10px;
+
+				h3 {
+					font-size: 1.25rem;
+					font-weight: 400;
+				}
+
+				button {
+					background: none;
+					font-size: 1.15rem;
+					cursor: pointer;
+				}
+			}
+
+			.answer {
+			}
+		}
+	}
+}
+
 @media screen and (max-width: 600px) {
 }
 @media screen and (max-width: 768px) {
