--- a/src/App.css
+++ b/src/App.css
@@ -597,7 +597,7 @@ main {
 		.question-box {
 			width: 100%;
 			margin-block: 10px;
-			padding-block: 30px;
+			padding-block: 20px;
 			border-bottom: 1px solid rgba(94, 94, 94, 0.15);
 
 			.question {
@@ -605,9 +605,10 @@ main {
 				align-items: center;
 				justify-content: space-between;
 				padding-inline: 10px;
+				margin-bottom: 15px;
 
 				h3 {
-					font-size: 1.25rem;
+					font-size: 1.3rem;
 					font-weight: 400;
 				}
 
@@ -619,9 +620,115 @@ main {
 			}
 
 			.answer {
+				width: 60%;
+				padding-inline: 20px;
+
+				p {
+					font-size: 1rem;
+					color: rgba(94, 94, 94, 1);
+				}
 			}
 		}
 	}
+}
+
+.customers {
+	width: 100%;
+	padding: 40px 20px 20px;
+
+	h1 {
+		text-align: center;
+		margin-bottom: 30px;
+	}
+
+	.cards {
+		position: relative;
+		width: 80%;
+		margin: 20px auto 0;
+		padding: 12px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 20px;
+		flex-wrap: no-wrap;
+		overflow-x: scroll;
+		scrollbar-color: rgba(245, 132, 52, 1) rgba(245, 132, 52, 0.288);
+		scrollbar-width: none;
+
+		.card {
+			position: relative;
+			min-width: 350px;
+			height: 450px;
+			text-align: center;
+			/* border: 1px solid; */
+			border-radius: 12px;
+			cursor: pointer;
+			transition: 0.3s ease;
+
+			img {
+				display: block;
+				width: 100px;
+				height: 100px;
+				margin: 20px auto;
+				object-fit: cover;
+				border-radius: 50%;
+				box-shadow: 2px 3px 8px rgba(94, 94, 94, 0.25);
+			}
+
+			q {
+				display: block;
+				color: rgba(96, 96, 96, 1);
+				font-style: italic;
+				font-size: 0.9rem;
+				width: 80%;
+				margin: 10px auto 15px;
+				text-align: center;
+				line-height: 1.5;
+			}
+
+			.user {
+				position: absolute;
+				bottom: 10px;
+				left: 50%;
+				transform: translateX(-50%);
+
+				.name {
+					color: #222;
+					font-size: 1.1rem;
+					margin-bottom: 8px;
+				}
+
+				.job {
+					font-size: 0.95rem;
+					font-weight: 500;
+					color: rgba(94, 94, 94, 1);
+				}
+			}
+		}
+
+		.card:hover {
+			transform: translateY(-2px);
+			box-shadow: 0px 3px 8px rgba(94, 94, 94, 0.15);
+		}
+	}
+
+	/* .cards::before,
+	.cards::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		width: 5px;
+		height: 100%;
+
+		background: #ffffff86;
+	}
+	.cards::before {
+		left: 50%;
+		border-right: 20px solid red;
+	}
+	.cards::after {
+		right: 0;
+	} */
 }
 
 @media screen and (max-width: 600px) {
