--- a/src/App.css
+++ b/src/App.css
@@ -740,14 +740,16 @@ main {
 	.container {
 		width: 90%;
 		display: flex;
+		flex-wrap: wrap;
 		margin-top: 30px;
 		margin-inline: auto;
 		padding: 20px;
 		align-items: center;
+		justify-content: space-between;
 		gap: 20px;
 
 		.cards {
-			width: 60%;
+			width: 50%;
 			padding: 20px;
 			display: flex;
 			align-items: start;
@@ -776,6 +778,90 @@ main {
 					color: rgba(96, 96, 96, 1);
 				}
 			}
+		}
+
+		form {
+			width: 500px;
+			padding: 20px;
+
+			.text {
+				margin-bottom: 20px;
+				color: #fff;
+
+				h2 {
+					font-size: 1.2rem;
+					margin-bottom: 15px;
+				}
+
+				p {
+					font-size: 1rem;
+					font-weight: 300;
+				}
+			}
+
+			input {
+				width: 250px;
+				margin-right: 30px;
+				padding: 12px 15px;
+				background: rgba(45, 31, 20, 1);
+				backdrop-filter: blur(3px);
+				border-radius: 7px;
+				color: #fff;
+				font-size: 1rem;
+			}
+
+			input::placeholder {
+				color: #fff;
+				font-size: 1rem;
+			}
+
+			button {
+				padding: 10px 15px;
+
+				border-radius: 7px;
+				color: #fff;
+				font-size: 1rem;
+				background: linear-gradient(
+					112.48deg,
+					#f58634 -6.3%,
+					#ffa84f 100%
+				);
+				cursor: pointer;
+				transition: background 0.3s ease;
+			}
+
+			button:hover {
+				background: linear-gradient(
+					112.48deg,
+					#ffb883 -6.3%,
+					#ffb76d 100%
+				);
+			}
+
+			button:active {
+				background: none;
+			}
+		}
+	}
+
+	footer {
+		margin-top: 20px;
+		padding: 20px;
+		border-top: 2px solid rgba(96, 96, 96, 1);
+		display: flex;
+		align-items: center;
+
+		p {
+			margin-right: auto;
+			font-size: 0.9rem;
+			color: #fff;
+			font-weight: 300;
+		}
+
+		.socials {
+			width: 300px;
+			display: flex;
+			gap: 10px;
 		}
 	}
 }
