--- a/src/App.css
+++ b/src/App.css
@@ -13,24 +13,6 @@ header {
 	align-items: center;
 	justify-content: space-around;
 
-	& .logo {
-		width: 109px;
-		display: flex;
-		align-items: center;
-		gap: 5px;
-		/* margin-right: auto; */
-		cursor: pointer;
-
-		img {
-			width: 35px;
-		}
-
-		h3 {
-			font-size: 1rem;
-			font-weight: 700;
-		}
-	}
-
 	nav {
 		width: 450px;
 		display: flex;
@@ -107,47 +89,50 @@ main {
 		height: 120vh;
 		overflow: hidden;
 		position: relative;
+		a {
+			text-decoration: none;
 
-		.free-test {
-			width: 340px;
-			height: 40px;
-			margin: 20px auto;
-			display: flex;
-			align-items: center;
-			gap: 10px;
-			padding: 0 10px;
-			text-align: center;
-			background: rgba(255, 251, 248, 1);
-			cursor: pointer;
-			border-radius: 30px;
-
-			.icon {
-				position: relative;
-				width: 30px;
-				height: 30px;
+			.free-test {
+				width: 340px;
+				height: 40px;
+				margin: 20px auto;
 				display: flex;
 				align-items: center;
-				justify-content: center;
-				background: rgba(249, 146, 61, 0.8);
-				border-radius: 50%;
-				z-index: 5;
-			}
+				gap: 10px;
+				padding: 0 10px;
+				text-align: center;
+				background: rgba(255, 251, 248, 1);
+				cursor: pointer;
+				border-radius: 30px;
 
-			.icon::after {
-				content: "";
-				width: 100%;
-				height: 100%;
-				position: absolute;
-				top: 0;
-				left: 0;
-				z-index: -1;
-				border-radius: inherit;
-				background: rgba(249, 146, 61, 0.5);
-				animation: expand 2s infinite ease;
-			}
+				.icon {
+					position: relative;
+					width: 30px;
+					height: 30px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					background: rgba(249, 146, 61, 0.8);
+					border-radius: 50%;
+					z-index: 5;
+				}
 
-			p {
-				color: rgba(233, 124, 33, 1);
+				.icon::after {
+					content: "";
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					top: 0;
+					left: 0;
+					z-index: -1;
+					border-radius: inherit;
+					background: rgba(249, 146, 61, 0.5);
+					animation: expand 2s infinite ease;
+				}
+
+				p {
+					color: rgba(233, 124, 33, 1);
+				}
 			}
 		}
 
